# rayshade4

./: CMakeLists.txt
src/: CMakeLists.txt
src/libray/: CMakeLists.txt
src/libray/include/libcommon/: common.h  expr.h  sampling.h  transform.h
src/libray/include/liblight/: extended.h
src/libray/include/libobj/: geom.h  intersect.h  roots.h
src/libray/include/libsurf/: surface.h
src/libray/libcommon/: expr.c  rotate.c  sampling.c  scale.c  transform.c  translate.c  vecmath.c  xform.c
src/libray/libimage/: image.c
src/libray/liblight/: extended.c  infinite.c  jittered.c  light.c  point.c  shadow.c  spot.c
src/libray/libobj/: blob.c  bounds.c  box.c  cone.c  csg.c  cylinder.c  disc.c  geom.c  grid.c  hf.c  instance.c  intersect.c  list.c  plane.c  poly.c  roots.c  sphere.c  torus.c  triangle.c
src/libray/libsurf/: atmosphere.c  fog.c  fogdeck.c  mist.c  surface.c  surfshade.c
src/libray/libtext/: blotch.c  bump.c  checker.c  cloud.c  fbm.c  gloss.c  imagetext.c  mapping.c  marble.c  mount.c  noise.c  sky.c  stripe.c  textaux.c  texture.c  windy.c
